# quiz_master_v2_21f3001443

./: package-lock.json  package.json
backend/: README.md  app.py  pyproject.toml
backend/modules/: __init__.py  api.py  config.py  init.py  schema.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: FlatpickrDateTime.vue  Footer.vue  HeaderBar.vue
frontend/src/mixins/: UserStatus.js
frontend/src/router/: index.js
frontend/src/views/: Home.vue  Login.vue  Register.vue  UserCreate.vue
