[project]
name = "quizmaster"
version = "0.1.0"
description = "A backend service for the quizmaster application"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "datetime>=5.5",
    "fastapi>=0.116.1",
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-restful>=0.3.10",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]
